created mobile app base functionality
